# attendees_picker

./: .gitignore  README.md  pyproject.toml  tests.py
.github/workflows/: black.yml  tests.yml
attendees_picker/: __init__.py
