[tool.poetry]
name = "attendees-picker"
version = "1.0.0"
description = "Select the attendees of an event randomly"
authors = ["Jérôme Deuchnord <jerome@deuchnord.fr>"]
license = "WTFPL-1.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
